--- a/back-end/package.json
+++ b/back-end/package.json
@@ -3,14 +3,13 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
-    "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "npx tsc",
         "start": "node ./dist/app.js",
         "dist": "tsc -p .",
-        "dev": "nodemon ./app.ts",
-        "type": "module"
+        "dev": "nodemon ./src/App.ts"
+  
         },
     "keywords": [],
     "author": "",
