--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,21 +9,22 @@
         "start": "node ./dist/app.js",
         "dist": "tsc -p .",
         "dev": "nodemon ./src/App.ts"
-  
-        },
+    },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/cors": "^2.8.13",
         "@types/express": "^4.17.7",
+        "@types/morgan": "^1.9.3",
         "@types/node": "^18.11.11",
-        "typescript": "^4.9.3",
-        "ts-node": "^8.10.2"
+        "ts-node": "^8.10.2",
+        "typescript": "^4.9.3"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
-        "cors": "^2.8.5",
         "helmet": "^5.1.1",
         "logger": "^0.0.1",
         "morgan": "^1.10.0",
