--- a/back-end/package.json
+++ b/back-end/package.json
@@ -8,7 +8,7 @@
         "build": "npx tsc",
         "start": "node ./dist/app.js",
         "dist": "tsc -p .",
-        "dev": "nodemon ./src/App.ts"
+        "dev": "nodemon ./src/app.ts"
     },
     "keywords": [],
     "author": "",
