--- a/back-end/package.json
+++ b/back-end/package.json
@@ -27,6 +27,7 @@
         "express": "^4.18.2",
         "helmet": "^5.1.1",
         "logger": "^0.0.1",
+        "mongoose": "^6.8.0",
         "morgan": "^1.10.0",
         "pg": "^8.7.3"
     }
