--- a/back-end/tsconfig.json
+++ b/back-end/tsconfig.json
@@ -7,5 +7,8 @@
     "sourceMap": true,
     "outDir": "dist" //Specifies the transpiler directory.
     },
-    "lib": ["es2015"]
+    "lib": ["es2015"],
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
     }
